--- a/index.html
+++ b/index.html
@@ -2,19 +2,45 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
     <title>Cover Template for Bootstrap</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    
     <!-- Custom styles for this template -->
+    <link href="css/styles.css" rel="stylesheet">
   </head>
 
   <body>
 
-    <button class="btn btn-primary">test</button>
+    <header>
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Tasks</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Borrowers</a>
+              </li>
+               <li class="nav-item">
+                <a class="nav-link" href="#">Agencies</a>
+              </li>
+               <li class="nav-item">
+                <a class="nav-link" href="#">Agents</a>
+              </li>
+               <li class="nav-item">
+                <a class="nav-link" href="#">Transactions</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
 
   </body>
 </html>
