--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <a class="nav-link" href="#">Transactions</a>
               </li>
             </ul>
+             <span class="navbar-text">
+      Navbar text with an inline element
+    </span>
           </div>
         </nav>
       </div>
