--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <header>
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg">
+          <a class="navbar-brand" href="#">Title</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa fa-bars"></i>
+          </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
