--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <!-- Begin Header -->
     <header>
       <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg">
-          <a class="navbar-brand" href="#">Title</a>
+        <nav class="navbar navbar-expand-lg justify-content-end">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fa fa-bars"></i>
           </button>
